update examples in keeping with issue #21

--- a/examples/ideal_gas_law/first_principles.ipynb
+++ b/examples/ideal_gas_law/first_principles.ipynb
@@ -18,30 +18,34 @@
     "\\Lambda = \\bigg(\\frac{\\beta h^2}{2\\pi m}\\bigg)^{1/2}.\n",
     "$$\n",
     "\n",
-    "The most useful way to work with the partition function is in its logarithmic form, $\\ln Q$. \n",
+    "The most useful way to work with the partition function is in its logarithmic form, \n",
     "\n",
     "$$\n",
-    "\\ln Q = \\ln \\bigg(\\frac{V^N}{N!\\Lambda^{3N}}\\bigg) = \\ln V^N - \\ln N! - \\ln\\Lambda^{3N}\n",
+    "\\ln Q = \\ln \\bigg(\\frac{V^N}{N!\\Lambda^{3N}}\\bigg) = \\ln V^N - \\ln N! - \\ln\\Lambda^{3N}.\n",
     "$$\n",
     "\n",
-    "$$\n",
-    "\\ln Q = N\\ln V - (N\\ln N - N) - N\\ln\\Lambda^3\n",
-    "$$\n",
+    "Using Stirling's approximation,\n",
     "\n",
     "$$\n",
-    "\\ln Q = N\\ln V - (N\\ln N - N) - \\frac{3}{2}N\\Bigg[\\ln \\beta + \\ln \\bigg(\\frac{\\beta h^2}{2\\pi m}\\bigg) \\Bigg]\n",
+    "\\ln Q = N\\ln V - (N\\ln N - N) - N\\ln\\Lambda^3,\n",
+    "$$\n",
+    "\n",
+    "and substituting the de Broglie thermal wavelength,\n",
+    "\n",
+    "$$\n",
+    "\\ln Q = N\\ln V - (N\\ln N - N) - \\frac{3}{2}N\\Bigg[\\ln \\beta + \\ln \\bigg(\\frac{\\beta h^2}{2\\pi m}\\bigg) \\Bigg].\n",
     "$$\n",
     "\n",
     "The partition function can give information about thermodynamics of the system, \n",
     "\n",
     "$$\n",
-    "p = k_bT\\bigg(\\frac{\\partial\\ln Q}{\\partial V}\\bigg)_T\n",
+    "p = k_bT\\bigg(\\frac{\\partial\\ln Q}{\\partial V}\\bigg)_T,\n",
     "$$\n",
     "\n",
     "This means, using the version of the partition function outlined above we can obtain the ideal gas law, \n",
     "\n",
     "$$\n",
-    "p = k_BT\\frac{N}{V} = \\frac{Nk_BT}{V}\n",
+    "p = k_BT\\frac{N}{V} = \\frac{Nk_BT}{V}.\n",
     "$$"
    ]
   },
