--- a/examples/ideal_gas_law/ideal_gas_law.ipynb
+++ b/examples/ideal_gas_law/ideal_gas_law.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "# Atomistic simulation\n",
     "\n",
-    "The use of computers in chemistry is becoming more and more commonplace with increases computational resource and more efficient and effective algorithms. Computer simulation of atomic and molecular species takes two \"flavours\":\n",
+    "The use of computers in chemistry is becoming more common as computers are increasing in power and the algorithms are becoming more accurate and efficient. Computer simulation of atomic and molecular species takes two \"flavours\":\n",
     "\n",
-    "- **Quantum calculations**: where approxmations are made to the Schrödinger equation to allow for its calculation for a multi-electron system (more information about this can be found in Atkins & Friedman's *Molecular Quantum Mechanics*),\n",
+    "- **Quantum calculations**: where approximations are made to the Schrödinger equation to allow for its calculation for a multi-electron system (more information about this can be found in Atkins & Friedman's *Molecular Quantum Mechanics*),\n",
     "- **Classical simulations**: where model interactions between atoms are developed to allow chemical systems to be simulated,\n",
     "\n",
     "This exercise will focus on the latter.\n",
@@ -28,7 +28,7 @@
     "\n",
     "One of the most popular models used to simulate interparticle interactions is known as the **Lennard-Jones** function. This models the London dispersion interactions between atoms. Hopefully the London dispersion interactions are familiar as consisting of: \n",
     "\n",
-    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of intantenous dipole formation,\n",
+    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of instantenous dipole formation,\n",
     "- **Pauli's exclusion principle**: the repulsion which stops atoms overlapping as no two electrons can have the same quantum state. \n",
     "\n",
     "This means that the Lennard-Jones function is attractive when particles are close enough to induce dipole formation but **very** repulsive when the particles are too close. The Lennard-Jones function has the following form,\n",
@@ -230,7 +230,7 @@
     "- force: `force_sample`\n",
     "- energy: `energy_sample`\n",
     "\n",
-    "These are obtained as showen in the cell below."
+    "These are obtained as shown in the cell below."
    ]
   },
   {
@@ -358,7 +358,7 @@
     "\n",
     "$$ pV = Nk_BT, $$\n",
     "\n",
-    "where, $p$ is the presssure, $V$ is the volume, $N$ is the number of atoms, $k_B$ is the Boltzmann constant and $T$ is the temperature. This relationship can be proven from a multi particle partition function as shown [here](./first_principles.ipynb), abstract the proof given to show that the ideal gas law in two dimensions is as follows, \n",
+    "where, $p$ is the pressure, $V$ is the volume, $N$ is the number of atoms, $k_B$ is the Boltzmann constant and $T$ is the temperature. This relationship can be proven from a multi particle partition function as shown [here](./first_principles.ipynb), abstract the proof given to show that the ideal gas law in two dimensions is as follows, \n",
     "\n",
     "$$ pA = Nk_BT, $$\n",
     "\n",
@@ -376,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simulate the argon system at a series of densities, we recommend keeping the box length as 40 Å and the temperature at 273 K while varying the number of particles up to 100. Calculate the mean pressure measured throughout each simulation and plot this against the number of particles, also plot the ideal gas law on the same graph. Identify any deviations from the ideal gas law that are present and disucss the reasons. "
+    "Simulate the argon system at a series of densities, we recommend keeping the box length as 40 Å and the temperature at 273 K while varying the number of particles up to 100. Calculate the mean pressure measured throughout each simulation and plot this against the number of particles, also plot the ideal gas law on the same graph. Identify any deviations from the ideal gas law that are present and discuss the reasons. "
    ]
   },
   {
