--- a/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
+++ b/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "# Atomistic simulation\n",
     "\n",
-    "The use of computers in chemistry is becoming more and more commonplace with increases computational resource and more efficient and effective algorithms. Computer simulation of atomic and molecular species takes two \"flavours\":\n",
+    "The use of computers in chemistry is becoming more common as computers are increasing in power and the algorithms are becoming more accurate and efficient. Computer simulation of atomic and molecular species takes two \"flavours\":\n",
     "\n",
-    "- **Quantum calculations**: where approxmations are made to the Schrödinger equation to allow for its calculation for a multi-electron system (more information about this can be found in Atkins & Friedman's *Molecular Quantum Mechanics*),\n",
+    "- **Quantum calculations**: where approximations are made to the Schrödinger equation to allow for its calculation for a multi-electron system (more information about this can be found in Atkins & Friedman's *Molecular Quantum Mechanics*),\n",
     "- **Classical simulations**: where model interactions between atoms are developed to allow chemical systems to be simulated,\n",
     "\n",
     "This exercise will focus on the latter.\n",
@@ -28,7 +28,7 @@
     "\n",
     "One of the most popular models used to simulate interparticle interactions is known as the **Lennard-Jones** function. This models the London dispersion interactions between atoms. Hopefully the London dispersion interactions are familiar as consisting of: \n",
     "\n",
-    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of intantenous dipole formation,\n",
+    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of instantenous dipole formation,\n",
     "- **Pauli's exclusion principle**: the repulsion which stops atoms overlapping as no two electrons can have the same quantum state. \n",
     "\n",
     "This means that the Lennard-Jones function is attractive when particles are close enough to induce dipole formation but **very** repulsive when the particles are too close. The Lennard-Jones function has the following form,\n",
@@ -133,7 +133,7 @@
     "- size of the simulation cell,\n",
     "- how the particles should be distributed.\n",
     "\n",
-    "The first line is to set up the visualisation environment within the Jupyter notebook, and the third line then sets and plots the particular enivornment that you want (in this case the `JustCell` environment)."
+    "The first line is to set up the visualisation environment within the Jupyter notebook, and the third line then sets and plots the particular environment that you want (in this case the `JustCell` environment)."
    ]
   },
   {
@@ -190,7 +190,7 @@
     "\n",
     "### Calculate forces\n",
     "\n",
-    "The next stage is to calculate the forces on each of the particles. The forces on each of the atoms can be force directly from the energy (which is given by the Lennard-Jones function discussed above), as the force is the negative of the first deriviative of the energy with respect to the distance, \n",
+    "The next stage is to calculate the forces on each of the particles. The forces on each of the atoms can be force directly from the energy (which is given by the Lennard-Jones function discussed above), as the force is the negative of the first derivative of the energy with respect to the distance, \n",
     "\n",
     "$$ \\mathbf{f} = -\\frac{\\partial E}{\\partial r}. $$\n",
     "\n",
