--- a/examples/monte_carlo/intro_to_monte_carlo.ipynb
+++ b/examples/monte_carlo/intro_to_monte_carlo.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "# Atomistic simulation\n",
     "\n",
-    "The use of computers in chemistry is becoming more and more commonplace with increases computational resource and more efficient and effective algorithms. Computer simulation of atomic and molecular species takes two \"flavours\":\n",
+    "The use of computers in chemistry is becoming more common as computers are increasing in power and the algorithms are becoming more accurate and efficient. Computer simulation of atomic and molecular species takes two \"flavours\":\n",
     "\n",
-    "- **Quantum calculations**: where approxmations are made to the Schrödinger equation to allow for its calculation for a multi-electron system (more information about this can be found in Atkins & Friedman's *Molecular Quantum Mechanics*),\n",
+    "- **Quantum calculations**: where approximations are made to the Schrödinger equation to allow for its calculation for a multi-electron system (more information about this can be found in Atkins & Friedman's *Molecular Quantum Mechanics*),\n",
     "- **Classical simulations**: where model interactions between atoms are developed to allow chemical systems to be simulated,\n",
     "\n",
     "This exercise will focus on the latter.\n",
@@ -28,7 +28,7 @@
     "\n",
     "One of the most popular models used to simulate interparticle interactions is known as the **Lennard-Jones** function. This models the London dispersion interactions between atoms. Hopefully the London dispersion interactions are familiar as consisting of: \n",
     "\n",
-    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of intantenous dipole formation,\n",
+    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of instantenous dipole formation,\n",
     "- **Pauli's exclusion principle**: the repulsion which stops atoms overlapping as no two electrons can have the same quantum state. \n",
     "\n",
     "This means that the Lennard-Jones function is attractive when particles are close enough to induce dipole formation but **very** repulsive when the particles are too close. The Lennard-Jones function has the following form,\n",
@@ -114,7 +114,7 @@
     "\n",
     "## Monte Carlo\n",
     "\n",
-    "Monte Carlo or MC is a broad class of simulation method for determining equilibrium properties about a system. Monte Carlo is in many ways similar to [molecular dynamics](../molecular_dynamics/intro_to_molecular_dynamics.ipynb) however it makes use of statistical mechanics in lieu of molecular dynamics. Therefore, instead of dynamical information, the information generated is accoprding to Boltzmann probabilities. The algorithm that is used in Monte Carlo simulations are as follows:\n",
+    "Monte Carlo or MC is a broad class of simulation method for determining equilibrium properties about a system. Monte Carlo is in many ways similar to [molecular dynamics](../molecular_dynamics/intro_to_molecular_dynamics.ipynb) however it makes use of statistical mechanics in lieu of molecular dynamics. Therefore, instead of dynamical information, the information generated is according to Boltzmann probabilities. The algorithm that is used in Monte Carlo simulations are as follows:\n",
     "\n",
     "1. initialise the system,\n",
     "2. calculate the energy of the system,\n",
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the particles are more than 15 Å (or half the box length if the box length is less than 30 Å), the energy is automatically assigned as 0, since the particles are considered to be far enough apart that there interaction is neglible.\n",
+    "If the particles are more than 15 Å (or half the box length if the box length is less than 30 Å), the energy is automatically assigned as 0, since the particles are considered to be far enough apart that there interaction is negligible.\n",
     "\n",
     "### Make a change\n",
     "\n",
@@ -277,7 +277,7 @@
     "\n",
     "$$ n < \\exp{\\bigg(\\frac{E_{\\text{new}} - E_{\\text{old}}}{k_BT}\\bigg)}, $$  \n",
     "\n",
-    "where $n\\sim U(0, 1)$, $k_B$ is the Boltzmann constant, and $T$ is the temperature. This is implimented in pylj using the `mc.metropolis` function."
+    "where $n\\sim U(0, 1)$, $k_B$ is the Boltzmann constant, and $T$ is the temperature. This is implemented in pylj using the `mc.metropolis` function."
    ]
   },
   {
