--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -37,7 +37,7 @@
     "        # Sample the thermodynamic and structural parameters of the system\n",
     "        system.md_sample()\n",
     "        # Allow the system to interact with a heat bath\n",
-    "        #system.heat_bath(temperature)\n",
+    "        system.heat_bath(temperature)\n",
     "        # Iterate the time\n",
     "        system.time += system.timestep_length\n",
     "        system.step += 1\n",
