reduce the number of particles in demo

--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "md_simulation(100, 273.15, 100, 5000, 25)"
+    "md_simulation(50, 273.15, 100, 5000, 25)"
    ]
   },
   {
@@ -80,9 +80,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pylj]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pylj-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -94,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
