--- a/examples/simple_examples/monte_carlo.ipynb
+++ b/examples/simple_examples/monte_carlo.ipynb
@@ -88,9 +88,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pylj]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pylj-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -102,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
