add maxwell boltzmann distribution visual

--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -26,7 +26,7 @@
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
-    "    sample_system = sample.Energy(system)\n",
+    "    sample_system = sample.MaxBolt(system)\n",
     "    # Start at time 0\n",
     "    system.time = 0\n",
     "    # Begin the molecular dynamics loop\n",
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "md_simulation(50, 273.15, 100, 5000, 25)"
+    "md_simulation(20, 1000, 100, 50000, 100)"
    ]
   },
   {
