Fix examples notebooks
Remove previously used `comp` extensions from jupyter notebooks.

Closes #51

--- a/examples/ideal_gas_law/ideal_gas_law.ipynb
+++ b/examples/ideal_gas_law/ideal_gas_law.ipynb
@@ -6,9 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from pylj import md, comp, util, sample"
+    "from pylj import md, util, sample\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -28,7 +31,7 @@
     "\n",
     "One of the most popular models used to simulate interparticle interactions is known as the **Lennard-Jones** function. This models the London dispersion interactions between atoms. Hopefully the London dispersion interactions are familiar as consisting of: \n",
     "\n",
-    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of instantenous dipole formation,\n",
+    "- **van der Waals attraction**: the attraction between atoms that occurs as a result of the formation of instantaneous dipole formation,\n",
     "- **Pauli's exclusion principle**: the repulsion which stops atoms overlapping as no two electrons can have the same quantum state. \n",
     "\n",
     "This means that the Lennard-Jones function is attractive when particles are close enough to induce dipole formation but **very** repulsive when the particles are too close. The Lennard-Jones function has the following form,\n",
@@ -69,6 +72,8 @@
    "source": [
     "r = np.linspace( ◽◽◽, ◽◽◽, ◽◽◽ )\n",
     "E = ◽◽◽\n",
+    "\n",
+    "%matplotlib widget\n",
     "plt.plot( ◽◽◽, ◽◽◽ )\n",
     "plt.xlabel( ◽◽◽ )\n",
     "plt.ylabel( ◽◽◽ )\n",
@@ -120,6 +125,8 @@
     "\n",
     "r = np.linspace( ◽◽◽, ◽◽◽, ◽◽◽ )\n",
     "F = ◽◽◽\n",
+    "\n",
+    "%matplotlib widget\n",
     "plt.plot( ◽◽◽, ◽◽◽ )\n",
     "plt.xlabel( ◽◽◽ )\n",
     "plt.ylabel( ◽◽◽ )\n",
@@ -150,7 +157,7 @@
    "source": [
     "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sampling_class):\n",
     "    # Creates the visualisation environment\n",
-    "    %matplotlib notebook\n",
+    "    %matplotlib widget\n",
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
@@ -160,16 +167,13 @@
     "    # Begin the molecular dynamics loop\n",
     "    for i in range(0, number_of_steps):\n",
     "        # At each step, calculate the forces on each particle and get acceleration\n",
-    "        system.particles, system.distances, system.forces, system.energies = comp.compute_forces(system.particles, \n",
-    "                                                                                                 system.box_length, \n",
-    "                                                                                                 system.cut_off)\n",
+    "        system.compute_force() \n",
     "        # Run the equations of motion integrator algorithm\n",
-    "        system.particles = md.velocity_verlet(system.particles, system.timestep_length, system.box_length, \n",
-    "                                              system.cut_off)\n",
+    "        system.integrate(md.velocity_verlet)\n",
     "        # Sample the thermodynamic and structural parameters of the system\n",
     "        system = md.sample(system.particles, system.box_length, system.initial_particles, system)\n",
     "        # Allow the system to interact with a heat bath\n",
-    "        system.particles = comp.heat_bath(system.particles, system.temperature_sample, temperature)\n",
+    "        system.heat_bath(temperature)\n",
     "        # Iterate the time\n",
     "        system.time += system.timestep_length\n",
     "        system.step += 1\n",
