--- a/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
+++ b/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
@@ -6,9 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from pylj import md, comp, util, sample, pairwise"
+    "from pylj import md, util, sample, forcefields\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -94,10 +97,12 @@
    "outputs": [],
    "source": [
     "r = np.linspace( 3e-10, 8e-10, 100 )\n",
-    "E = pairwise.lennard_jones_energy(1.36e-134, 9.27e-78, r)\n",
+    "E = forcefields.lennard_jones(r, [1.36e-134, 9.27e-78])\n",
+    "\n",
+    "%matplotlib widget\n",
     "plt.plot( r, E )\n",
-    "plt.xlabel( 'r/m' )\n",
-    "plt.ylabel( 'E/J' )\n",
+    "plt.xlabel( '$r/m$' )\n",
+    "plt.ylabel( '$E/J$' )\n",
     "plt.show()"
    ]
   },
@@ -142,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "simulation = md.initialise(16, 300, 50, 'square')\n",
     "sample_system = sample.JustCell(simulation)"
    ]
@@ -194,7 +199,7 @@
     "\n",
     "$$ \\mathbf{f} = -\\frac{\\partial E}{\\partial r}. $$\n",
     "\n",
-    "The force of a given interaction can be found using the `pairwise.lennard_jones_force` function available in pylj, below plot the force for the interaction between two argon atoms as was completed for the energy above. "
+    "The force of a given interaction can be found using the `forcefields.lennard(dr, constants, force=True)` function available in pylj, below plot the force for the interaction between two argon atoms as was completed for the energy above. "
    ]
   },
   {
@@ -203,9 +208,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "r = ◽◽◽\n",
     "f = ◽◽◽\n",
+    "\n",
+    "%matplotlib widget\n",
     "plt.plot( ◽◽◽, ◽◽◽ )\n",
     "plt.xlabel( ◽◽◽ )\n",
     "plt.ylabel( ◽◽◽ )\n",
@@ -281,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "simulation = md.initialise(16, 300, 50, 'square')\n",
     "sample_system = sample.JustCell(simulation)\n",
     "simulation.compute_force()\n",
