--- a/examples/monte_carlo/intro_to_monte_carlo.ipynb
+++ b/examples/monte_carlo/intro_to_monte_carlo.ipynb
@@ -6,9 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from pylj import mc, comp, util, sample, pairwise"
+    "from pylj import mc, util, sample, forcefields\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -67,9 +70,11 @@
    "source": [
     "r = np.linspace( ◽◽◽, ◽◽◽, ◽◽◽ )\n",
     "E = ◽◽◽\n",
-    "plt.plot( ◽◽◽, ◽◽◽ )\n",
-    "plt.xlabel( ◽◽◽ )\n",
-    "plt.ylabel( ◽◽◽ )\n",
+    "\n",
+    "%matplotlib widget\n",
+    "plt.plot(r, E)\n",
+    "plt.xlabel(\"$r/m$\")\n",
+    "plt.ylabel(\"$E/J$\")\n",
     "plt.show()"
    ]
   },
@@ -84,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to use the software pylj. This is a Python library, which means it is a collection of functions to enable the simulation by Monte Carlo. An example of a function in pylj is the `pairwise.lennard_jones_energy`, which can be used similar to the `lennard_jones` function that you have defined above."
+    "We are going to use the software pylj. This is a Python library, which means it is a collection of functions to enable the simulation by Monte Carlo. An example of a function in pylj is the `forcefields.lennard_jones`, which can be used similar to the `lennard_jones` function that you have defined above."
    ]
   },
   {
@@ -94,7 +99,9 @@
    "outputs": [],
    "source": [
     "r = np.linspace( 3e-10, 8e-10, 100 )\n",
-    "E = pairwise.lennard_jones_energy(1.36e-134, 9.27e-78, r)\n",
+    "E = forcefields.lennard_jones(r, [1.36e-134, 9.27e-78])\n",
+    "\n",
+    "%matplotlib widget\n",
     "plt.plot( r, E )\n",
     "plt.xlabel( 'r/m' )\n",
     "plt.ylabel( 'E/J' )\n",
@@ -142,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "simulation = mc.initialise(16, 300, 20, 'square')\n",
     "sample_system = sample.JustCell(simulation)"
    ]
@@ -176,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pylj has a function for the determination of the energy of each interaction, `pairwise.compute_energy`. This can be run as follows. "
+    "pylj has a function for the determination of the energy of each interaction, `System.compute_energy`. This can be run as follows. "
    ]
   },
   {
@@ -207,8 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_particle = simulation.select_random_particle()\n",
-    "simulation.new_random_position(random_particle)"
+    "simulation.select_random_particle()\n",
+    "simulation.new_random_position()"
    ]
   },
   {
