--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
     "    # Creates the visualisation environment\n",
-    "    %matplotlib notebook\n",
+    "    %matplotlib widget\n",
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
