--- a/examples/simple_examples/monte_carlo.ipynb
+++ b/examples/simple_examples/monte_carlo.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "def mc_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
     "    # Creates the visualisation environment\n",
-    "    %matplotlib notebook\n",
+    "    %matplotlib widget\n",
     "    # Initialise the system placing the particles on a square lattice\n",
     "    system = mc.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class as Energy, which shows the energy of the system\n",
