adjusted into setup and update scripts so plt widget works

--- a/examples/ideal_gas_law/ideal_gas_law.ipynb
+++ b/examples/ideal_gas_law/ideal_gas_law.ipynb
@@ -155,13 +155,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sampling_class):\n",
+    "def md_setup(number_of_particles, temperature, box_length):\n",
     "    # Creates the visualisation environment\n",
     "    %matplotlib widget\n",
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
-    "    sample_system = sampling_class(system)\n",
+    "    sample_system = sample.MaxBolt(system)\n",
+    "    return system, sample_system\n",
+    "\n",
+    "def md_simulation(system, sample_system, temperature, number_of_steps, sampling_class):\n",
     "    # Start at time 0\n",
     "    system.time = 0\n",
     "    # Begin the molecular dynamics loop\n",
@@ -202,12 +205,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "simulation1 = md_simulation(4, 100., 100, 10000, sample.JustCell)"
+    "system, sample_system = md_setup(4, 100., 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation1 = md_simulation(system, sample_system, 100., 10000, sample.JustCell)"
    ]
   },
   {
@@ -258,12 +268,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "simulation2 = md_simulation(40, ◽◽◽, 40, 10000, sample.Energy)"
+    "system2, sample_system2 = md_setup(40, 10, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation2 = md_simulation(system2, sample_system2, 10, 10000, sample.Energy)"
    ]
   },
   {
@@ -288,7 +305,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation3 = md_simulation( ◽◽◽, 100, 40, 10000, sample.RDF)"
+    "system3, sample_system3 = md_setup(80, 100, 40,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation3 = md_simulation( system3, sample_system3 , 1000, 10000, sample.RDF)"
    ]
   },
   {
@@ -344,7 +370,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation3 = md_simulation( ◽◽◽, 273.15, ◽◽◽, 10000, sample.Interactions)"
+    "system4, sample_system4 = md_setup(◽◽◽, 273.15, ◽◽◽)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation4 = md_simulation( system4, sample_system4, 273.15, 10000, sample.Interactions)"
    ]
   },
   {
@@ -389,7 +424,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation4 = md_simulation( ◽◽◽, 273.15, 40, 10000, sample.Interactions)\n",
+    "system5, sample_system5 = md_setup(◽◽◽, 273.15, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation5 = md_simulation(system5, sample_system5, 273.15, 10000, sample.Interactions)\n",
     "# print the mean pressure\n",
     "print(simulation4.pressure_sample.mean())\n",
     "# print the standard deviation in the mean pressure\n",
@@ -436,9 +480,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pylj]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-pylj-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -450,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -472,5 +516,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
