--- a/examples/ideal_gas_law/first_principles.ipynb
+++ b/examples/ideal_gas_law/first_principles.ipynb
@@ -60,9 +60,9 @@
  "metadata": {
   "author": "Ideal gas law from first principles",
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -74,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.10.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -96,5 +96,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
