--- a/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
+++ b/examples/molecular_dynamics/intro_to_molecular_dynamics.ipynb
@@ -289,7 +289,15 @@
    "source": [
     "%matplotlib widget\n",
     "simulation = md.initialise(16, 300, 50, 'square')\n",
-    "sample_system = sample.JustCell(simulation)\n",
+    "sample_system = sample.JustCell(simulation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "simulation.compute_force()\n",
     "◽◽◽ = verlet(◽◽◽, ◽◽◽, ◽◽◽, ◽◽◽, ◽◽◽, ◽◽◽)\n",
     "sample_system.update(simulation)"
@@ -321,9 +329,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pylj]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-pylj-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -335,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -357,5 +365,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
