--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -10,6 +10,7 @@
     "from pylj import md, sample\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import time\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -20,14 +21,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
+    "def md_setup(number_of_particles, temperature, box_length):\n",
     "    # Creates the visualisation environment\n",
     "    %matplotlib widget\n",
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
-    "    sample_system = sample.MaxBolt(system)\n",
-    "    # Start at time 0\n",
+    "    sample_system = sample.MaxBolt(system)# Start at time 0\n",
+    "    return system, sample_system\n",
+    "\n",
+    "def md_simulation(system, sample_system, temperature, number_of_steps, sample_frequency):\n",
     "    system.time = 0\n",
     "    # Begin the molecular dynamics loop\n",
     "    for i in range(0, number_of_steps):\n",
@@ -62,12 +65,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "md_simulation(20, 1000, 100, 50000, 100)"
+    "system,sample_system = md_setup(20, 1000, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_simulation(system,sample_system,1000, 5000, 100)"
    ]
   },
   {
@@ -80,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.10.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -116,5 +126,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
