--- a/examples/simple_examples/monte_carlo.ipynb
+++ b/examples/simple_examples/monte_carlo.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mc_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
+    "def mc_setup(number_of_particles, temperature, box_length):\n",
     "    # Creates the visualisation environment\n",
     "    %matplotlib widget\n",
     "    # Initialise the system placing the particles on a square lattice\n",
@@ -32,6 +32,9 @@
     "    system.old_energy = system.energies.sum()\n",
     "    # Add this energy to the energy sample array\n",
     "    system.mc_sample()\n",
+    "    return system, sample_system\n",
+    "\n",
+    "def mc_simulation(system, sample_system, temperature, number_of_steps, sample_frequency):\n",
     "    # Begin the monte carlo loop\n",
     "    for i in range(0, number_of_steps):\n",
     "        system.step += 1\n",
@@ -70,12 +73,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "system = mc_simulation(100, 273.15, 45, 5000, 25)"
+    "system, sample_system = mc_setup(100, 273.15, 45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system = mc_simulation(system, sample_system, 273.15, 5000, 25)"
    ]
   },
   {
@@ -88,7 +98,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.10.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -124,5 +134,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
