animated plotting now works in example notebooks

--- a/examples/ideal_gas_law/ideal_gas_law.ipynb
+++ b/examples/ideal_gas_law/ideal_gas_law.ipynb
@@ -73,7 +73,6 @@
     "r = np.linspace( ◽◽◽, ◽◽◽, ◽◽◽ )\n",
     "E = ◽◽◽\n",
     "\n",
-    "%matplotlib widget\n",
     "plt.plot( ◽◽◽, ◽◽◽ )\n",
     "plt.xlabel( ◽◽◽ )\n",
     "plt.ylabel( ◽◽◽ )\n",
@@ -126,7 +125,6 @@
     "r = np.linspace( ◽◽◽, ◽◽◽, ◽◽◽ )\n",
     "F = ◽◽◽\n",
     "\n",
-    "%matplotlib widget\n",
     "plt.plot( ◽◽◽, ◽◽◽ )\n",
     "plt.xlabel( ◽◽◽ )\n",
     "plt.ylabel( ◽◽◽ )\n",
@@ -155,16 +153,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def md_setup(number_of_particles, temperature, box_length):\n",
-    "    # Creates the visualisation environment\n",
-    "    %matplotlib widget\n",
+    "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sampling_class):\n",
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
     "    sample_system = sample.MaxBolt(system)\n",
-    "    return system, sample_system\n",
-    "\n",
-    "def md_simulation(system, sample_system, temperature, number_of_steps, sampling_class):\n",
     "    # Start at time 0\n",
     "    system.time = 0\n",
     "    # Begin the molecular dynamics loop\n",
@@ -208,16 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system, sample_system = md_setup(4, 100., 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation1 = md_simulation(system, sample_system, 100., 10000, sample.JustCell)"
+    "simulation1 = md_simulation(4, 100., 100, 10000, sample.JustCell)"
    ]
   },
   {
@@ -271,16 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system2, sample_system2 = md_setup(40, 10, 40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation2 = md_simulation(system2, sample_system2, 10, 10000, sample.Energy)"
+    "simulation2 = md_simulation(40, 10, 40, 10000, sample.Energy)"
    ]
   },
   {
@@ -314,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation3 = md_simulation( system3, sample_system3 , 1000, 10000, sample.RDF)"
+    "simulation3 = md_simulation( system3, sample_system3, 1000, 10000, sample.RDF)"
    ]
   },
   {
@@ -370,16 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system4, sample_system4 = md_setup(◽◽◽, 273.15, ◽◽◽)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation4 = md_simulation( system4, sample_system4, 273.15, 10000, sample.Interactions)"
+    "simulation4 = md_simulation(◽◽◽, 273.15, ◽◽◽, 10000, sample.Interactions)"
    ]
   },
   {
@@ -424,16 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system5, sample_system5 = md_setup(◽◽◽, 273.15, 40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation5 = md_simulation(system5, sample_system5, 273.15, 10000, sample.Interactions)\n",
+    "simulation5 = md_simulation(◽◽◽, 273.15, 40, 10000, sample.Interactions)\n",
     "# print the mean pressure\n",
     "print(simulation4.pressure_sample.mean())\n",
     "# print the standard deviation in the mean pressure\n",
@@ -446,7 +403,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "# Insert the plotting code here"
    ]
   },
@@ -494,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
