--- a/examples/simple_examples/monte_carlo.ipynb
+++ b/examples/simple_examples/monte_carlo.ipynb
@@ -20,9 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mc_setup(number_of_particles, temperature, box_length):\n",
-    "    # Creates the visualisation environment\n",
-    "    %matplotlib widget\n",
+    "def mc_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
     "    # Initialise the system placing the particles on a square lattice\n",
     "    system = mc.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class as Energy, which shows the energy of the system\n",
@@ -32,9 +30,6 @@
     "    system.old_energy = system.energies.sum()\n",
     "    # Add this energy to the energy sample array\n",
     "    system.mc_sample()\n",
-    "    return system, sample_system\n",
-    "\n",
-    "def mc_simulation(system, sample_system, temperature, number_of_steps, sample_frequency):\n",
     "    # Begin the monte carlo loop\n",
     "    for i in range(0, number_of_steps):\n",
     "        system.step += 1\n",
@@ -76,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system, sample_system = mc_setup(100, 273.15, 45)"
+    "system = mc_simulation(100, 273.15, 45, 5000, 25)"
    ]
   },
   {
@@ -84,9 +79,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "system = mc_simulation(system, sample_system, 273.15, 5000, 25)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -112,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
