--- a/examples/monte_carlo/intro_to_monte_carlo.ipynb
+++ b/examples/monte_carlo/intro_to_monte_carlo.ipynb
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "#%matplotlib widget\n",
     "simulation = mc.initialise(16, 300, 20, 'square')\n",
     "sample_system = sample.JustCell(simulation)"
    ]
@@ -364,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
