--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -21,16 +21,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def md_setup(number_of_particles, temperature, box_length):\n",
-    "    # Creates the visualisation environment\n",
-    "    %matplotlib widget\n",
+    "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
     "    # Initialise the system\n",
     "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
     "    # This sets the sampling class\n",
     "    sample_system = sample.MaxBolt(system)# Start at time 0\n",
-    "    return system, sample_system\n",
-    "\n",
-    "def md_simulation(system, sample_system, temperature, number_of_steps, sample_frequency):\n",
     "    system.time = 0\n",
     "    # Begin the molecular dynamics loop\n",
     "    for i in range(0, number_of_steps):\n",
@@ -68,16 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system,sample_system = md_setup(20, 1000, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md_simulation(system,sample_system,1000, 5000, 100)"
+    "md_simulation(20, 1000, 100, 5000, 100)"
    ]
   },
   {
@@ -104,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
